--- a/style.css
+++ b/style.css
@@ -8,3 +8,19 @@ body {
     background-color: red;
     margin: 0 auto;
 }
+
+.featured {
+    width: 100%;
+    height: 400px;
+    background-color: blue;
+    position: relative;
+    float: left;
+}
+
+.whoswho {
+    width: 100%;
+    height: 400px;
+    background-color: yellow;
+    position: relative;
+    float: left;
+}
